SPRING FRAMEWORK CHANGELOG
==========================
$Id$


Changes in version 1.0 RC1 (xx.01.2003)
---------------------------------------

Package org.springframework.aop
* added AfterReturning advice to complete AOP advice types
* RegexpMethodPointcut now also handles multiple patterns (backward compatible)
* changed AbstractAutoProxyCreator's "interceptors" property to "interceptorNames" to handle prototypes correctly

Package org.springframework.beans
* removed PropertyValuesValidator support from BeanWrapper
* moved SortDefinition classes to new beans.support package
* moved PagedListHolder classes from util package to beans.support, to remove cyclic package dependency
* reworked BeanPostProcessor interface into postProcessBeforeInitialization and postProcessAfterInitialization
* revised order of BeanFactory lifecycle methods, now invoking setBeanFactory etc before afterPropertiesSet
* added BeanCreationException, thrown on any error during bean creation (property setting, lifecycle methods)
* added "autodetect" autowire mode that chooses either "constructor" or "byType" through introspection of the class
* reworked AutowireCapableBeanFactory's "autowire" and "autowireConstructor" into a generic "autowire" method
* moved AutowireCapableBeanFactory interface to package beans.factory.config
* added "getAliases" method to BeanDefinitionRegistry interface (same as in BeanFactory)
* redesigned RootBeanDefinition and DefaultXmlBeanDefinitionParser to alternatively work with plain class names
* load "spring-beans.dtd" via class loader of BeansDtdResolver instead of thread context class loader
* removed deprecated "ref external" support from XML bean definition format (use "ref bean" instead)
* added new "idref" tag to XML bean definition format, for referencing a bean ID as string (allowing for validation)
* added support for "autodetect" autowire mode to XML bean definition format