@@ -28,7 +28,7 @@ import org.springframework.aop.interceptor.NopInterceptor;
 import org.springframework.aop.support.DefaultAfterReturningAdvisor;
 import org.springframework.aop.support.DefaultInterceptionAroundAdvisor;
 import org.springframework.aop.support.DynamicMethodMatcherPointcutAroundAdvisor;
-import org.springframework.aop.support.SimpleIntroductionAdvisor;
+import org.springframework.aop.support.DefaultInterceptionIntroductionAdvisor;
 import org.springframework.aop.support.StaticMethodMatcherPointcutAfterReturningAdvisor;
 import org.springframework.aop.support.StaticMethodMatcherPointcutAroundAdvisor;
 import org.springframework.aop.support.StaticMethodMatcherPointcutBeforeAdvisor;
@@ -157,7 +157,7 @@ public abstract class AbstractAopProxyTests extends TestCase {
 		target1.setAge(age1);
 		ProxyFactory pf1 = new ProxyFactory(target1);
 		pf1.addAdvisor(new DefaultInterceptionAroundAdvisor(new NopInterceptor()));
-		pf1.addAdvisor(new SimpleIntroductionAdvisor(new TimestampIntroductionInterceptor()));
+		pf1.addAdvisor(new DefaultInterceptionIntroductionAdvisor(new TimestampIntroductionInterceptor()));
 		ITestBean tb = (ITestBean) target1;
 		
 		assertEquals(age1, tb.getAge());
@@ -668,7 +668,7 @@ public abstract class AbstractAopProxyTests extends TestCase {
 		target.setAge(21);
 		ProxyFactory pc = new ProxyFactory(target);
 		try {
-			pc.addAdvisor(0, new SimpleIntroductionAdvisor(new TimestampIntroductionInterceptor(), ITestBean.class));
+			pc.addAdvisor(0, new DefaultInterceptionIntroductionAdvisor(new TimestampIntroductionInterceptor(), ITestBean.class));
 			fail("Shouldn't be able to add introduction advice introducing an unimplemented interface");
 		}
 		catch (AopConfigException ex) {
@@ -688,7 +688,7 @@ public abstract class AbstractAopProxyTests extends TestCase {
 		target.setAge(21);
 		ProxyFactory pc = new ProxyFactory(target);
 		try {
-			pc.addAdvisor(0, new SimpleIntroductionAdvisor(new TimestampIntroductionInterceptor(), TestBean.class));
+			pc.addAdvisor(0, new DefaultInterceptionIntroductionAdvisor(new TimestampIntroductionInterceptor(), TestBean.class));
 			fail("Shouldn't be able to add introduction advice that introduces a class, rather than an interface");
 		}
 		catch (AopConfigException ex) {
@@ -707,7 +707,7 @@ public abstract class AbstractAopProxyTests extends TestCase {
 		
 		TestBean target2 = new TestBean();
 		ProxyFactory pf2 = new ProxyFactory(target2);
-		pf2.addAdvisor(new SimpleIntroductionAdvisor(new TimestampIntroductionInterceptor()));
+		pf2.addAdvisor(new DefaultInterceptionIntroductionAdvisor(new TimestampIntroductionInterceptor()));
 		ITestBean proxy2 = (ITestBean) createProxy(pf2);
 		
 		HashMap h = new HashMap();
