@@ -13,7 +13,7 @@ import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.springframework.aop.framework.AopConfigException;
 import org.springframework.aop.support.DelegatingIntroductionInterceptor;
-import org.springframework.aop.support.SimpleIntroductionAdvisor;
+import org.springframework.aop.support.DefaultInterceptionIntroductionAdvisor;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.metadata.Attributes;
 
@@ -22,7 +22,7 @@ import org.springframework.metadata.Attributes;
  * @author Rod Johnson
  * @version $Id$
  */
-public class ModifiableAdvisor extends SimpleIntroductionAdvisor implements InitializingBean {
+public class ModifiableAdvisor extends DefaultInterceptionIntroductionAdvisor implements InitializingBean {
 
 	protected final Log log = LogFactory.getLog(getClass());
 	
